2006-04-19  Sven Panne  <sven.panne@aedion.de>

	* common/include/AL/alc.h, src/alc/alc_context.c: Use ALvoid and ALCvoid
	only via pointer types, this is more in their intended spirit and works
	around some bugs in GCC 4.2 snapshots.

2006-03-23  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/i386/x86_floatmul.c: work-around gcc 3.3.x bug

	* CMakeLists.txt: disable warnings by default

	* src/arch/i386/x86_cpu_caps_prk.h, src/arch/i386/x86_cpu_caps_prk.c:
	small optimization, so that _alHave[SIMD] functions only have to
	check one variable

2006-03-23  Sven Panne  <sven.panne@aedion.de>

	* README: Mention CR/LF problem on MinGW/MSYS.

	* configure.ac: Due to some troubles with -ansi on MinGW and Cygwin,
	don't enable warnings by default.

2006-03-22  Sven Panne  <sven.panne@aedion.de>

	* configure.ac: Don't mention libraries twice in the static backend
	cases.

2006-03-08  Prakash Punnoor <prakash@punnoor.de>

	* test/testmultichannel.c: fix MacOS case

	* CMakeLists.txt: allow overiding of system alut

2006-03-07  Prakash Punnoor <prakash@punnoor.de>

	* src/backends/alc_backend.c: fix linking errors if some back-ends
	are not compiled in

	* CMakeLists.txt, test/testlib.h, test/testlib.c: LOKI capture gone

	* src/al_main.c, src/backends/alc_darwin.c: fix for MacOS X

	* admin/CMakeModules/SelectArgtypes.c.in: added

	* admin/CMakeModules/FindSelectArgtypes.cmake: make more compatible
	
	* admin/CMakeModules/FindCompilerFlagsSet.cmake: MacOS X gcc doesn't
	like -ansi and -ffastmath

2006-03-05  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: don't copy over static lib in windows

2006-03-03  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/Makefile.am, src/alc/alc_device.c,
	src/backends/alc_backend.c, src/backends/alc_backend.h,
	src/backends/alc_backend_alsa.c, src/backends/alc_backend_arts.c,
	src/backends/alc_backend_bsd.c, src/backends/alc_backend_darwin.c,
	src/backends/alc_backend_esd.c, src/backends/alc_backend_irix.c,